--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
         "@ngneat/transloco": "3.1.4",
         "apexcharts": "3.33.1",
         "crypto-js": "4.1.1",
+        "danfojs": "^1.1.1",
+        "devextreme": "21.2.7",
+        "devextreme-angular": "21.2.7",
         "highlight.js": "11.4.0",
         "lodash-es": "4.17.21",
         "moment": "2.29.1",
