--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
         "@typescript-eslint/parser": "5.12.0",
         "autoprefixer": "10.4.2",
         "chroma-js": "2.4.2",
+        "devextreme-cli": "latest",
+        "devextreme-themebuilder": "^21.2.4",
         "eslint": "8.9.0",
         "eslint-plugin-import": "2.25.4",
         "eslint-plugin-jsdoc": "37.9.4",
